# rpggame

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt
.cache/clangd/index/: Level1.h.1EF4B59C300FCD4A.idx  Level1.h.6222F1FBE7AD1BBB.idx  cgltf.h.4C41348D242605AC.idx  cgltf.h.D260E468777DE119.idx  config.h.83DE6D660D8A93E9.idx  config.h.8D74B74642BC27BD.idx  context.c.425B67905D096BA9.idx  context.c.F882467F7B0E7D7A.idx  dr_mp3.h.3F96C512ED6BC8E7.idx  dr_mp3.h.9EB6FF440B8D9CE6.idx  dr_wav.h.4988CD4BBAA13B1F.idx  dr_wav.h.E99C6AF71A563FD1.idx  egl_context.c.0275A7E0C382ED39.idx  egl_context.c.4F450C558F89CE96.idx  glad.h.22498A39A4C16557.idx  glad.h.A00D734F09FE7939.idx  glfw3.h.5AB9A32730D4A10B.idx  glfw3.h.AB4A6E4F3C3B5506.idx  glfw3native.h.30560BAED1367D8A.idx  glfw3native.h.5C5C380CE16F64BC.idx  glx_context.c.20B90F2ABB00559E.idx  glx_context.c.827139F0777EE571.idx  init.c.3079FC02571CB9F7.idx  init.c.BA37435E2AD80E70.idx  input.c.44250DEFF1F433A5.idx  input.c.ECAD7B5B2FE3D595.idx  internal.h.99D8A63CA7ED43E3.idx  internal.h.B879F025042CE715.idx  jar_mod.h.B9C3A232EFE937C5.idx  jar_mod.h.CDA9D006AD5F43F7.idx  jar_xm.h.585450EFD8D6D607.idx  jar_xm.h.F5967C528FCD6414.idx  linux_joystick.c.B860430141096044.idx  linux_joystick.c.D14A3661F65BD74E.idx  linux_joystick.h.435AB4CC293D1CCC.idx  linux_joystick.h.7E6E4CA1C3772655.idx  m3d.h.8F628E60869FAB71.idx  m3d.h.BC889E129B47FA37.idx  main.cpp.286503AD364CE402.idx  main.cpp.A27999AB972D309F.idx  (+122 more)
docs/: index.md  project_overview.md
docs/src/: main.cpp.md
include/: Game.h  InputHandler.h  isotexture.h  player.h  world.h
include/core/: Font.h  Game.h  engine.h  input_manager.h
include/game/: player.h  world.h
include/screen/: MainScreen.h
include/ui/: gui_manager.h
src/: Game.cpp  InputHandler.cpp  Level1.cpp  Level1.h  app.cpp  main.cpp  main.h  main.h~  player.cpp  player.h  world.cpp
src/core/: Font.cpp  Game.cpp  engine.cpp  input_manager.cpp
src/game/: player.cpp  world.cpp
src/ui/: gui_manager.cpp
